[package]
name = "george-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
